# discord-ng-japanese

./: .env.sample  Cargo.toml
examples/: tts.rs
src/: assistant.rs  dice.rs  llm.rs  main.rs  ng_japanese.rs  ping.rs  slot.rs  voice_chat.rs
