[package]
name = "discord-ng-japanese"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-openai = "0.23.4"
dotenv = "0.15.0"
rand = "0.8.5"
songbird = { version = "0.4.3", features = ["driver", "gateway", "twilight", "rustls"] }
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
twilight-cache-inmemory = "0.15.4"
twilight-gateway = "0.15.4"
twilight-http = "0.15.4"
twilight-model = "0.15.4"
vesper = "0.13.0"
